# platform-controller

./: .gitmodules
pico-source/: CMakeLists.txt  bnf.sh
pico-source/include/: motor.h
pico-source/src/: CMakeLists.txt  controller.cpp  motor.cpp  motor.h
